# decide

./: Cargo.toml  cli.yaml
.github/workflows/: rust.yml
src/: commands.rs  error.rs  main.rs  structs.rs
