[package]
name = "decide"
version = "0.1.0"
authors = ["Turzinski, Erik <Erik.Turzinski@adesso.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
clap = {version = "2.33.0", features = ["yaml"]}
directories = "2.0.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.3"
