[package]
name = "decide"
version = "0.1.0"
authors = ["devis350"]
edition = "2018"
repository = "https://github.com/devis350/decide"
license = "MIT OR Apache-2.0"
description = "a cli tool, aimed to help you to decide, wich project to work on "

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
cmd_lib = "0.7.8"
directories = "2.0.2"
lazy_static = "1.4.0"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.3"
